app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-service
  namespace: nodejs
spec:
  selector:
    app: nodejs
  ports:
    - protocol: TCP
      port: 4000
